--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
-  text-align: center;
+  margin-top: 30px;
 }
 
+/*
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -25,4 +26,37 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}*/
+
+.page{
+    position: relative;
+    flex: auto;
+    
+    overflow: hidden;
+    
+}
+
+.content{
+    position: relative;
+    margin-top: 17vw;
+    margin-bottom: 15vw;
+    padding-left: 4em;
+    padding-right: 4em;
+    max-width: 40em;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events: all;
+}
+
+.title{
+    position:  fixed;
+    left: 2em;
+    right: 2em;
+    top: 2em; 
+    
+    pointer-events: none;
+}
+
+::-webkit-scrollbar { 
+    display: none; 
 }
