--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,26 @@
+* {
+        margin: 0;
+        padding: 0;
+    }
+
+html {
+   margin: 0px;
+    padding:0px;
+   height: 100%;
+   width: 100%;
+}
+
+head {
+   margin: 0px;
+   max-height: 0%;
+padding:0px;
+   font-family: sans-serif;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+   margin: 0px;
+   min-height: 100%;
+padding:0px;
+   width: 100%;
+   font-family: sans-serif;
 }
